--- a/requirements.txt
+++ b/requirements.txt
@@ -1,91 +1,105 @@
-absl-py==2.3.1
-AeroSandbox==4.2.8
-asttokens==3.0.0
+absl-py==2.4.0
+AeroSandbox==4.2.9
+annotated-types==0.7.0
+asttokens==3.0.1
 astunparse==1.6.3
 attrs==25.4.0
 casadi==3.7.2
-certifi==2025.10.5
-charset-normalizer==3.4.3
+certifi==2026.1.4
+charset-normalizer==3.4.4
+click==8.3.1
 comm==0.2.3
 contourpy==1.3.3
 cycler==0.12.1
-debugpy==1.8.17
+debugpy==1.8.19
 decorator==5.2.1
-dill==0.4.0
+dill==0.4.1
 executing==2.2.1
 fastjsonschema==2.21.2
-flatbuffers==25.9.23
-fonttools==4.60.1
-gast==0.6.0
+flatbuffers==25.12.19
+fonttools==4.61.1
+gast==0.7.0
+gitdb==4.0.12
+GitPython==3.1.46
 google-pasta==0.2.0
-grpcio==1.75.1
-h5py==3.14.0
-idna==3.10
-ipykernel==6.30.1
-ipython==9.6.0
+grpcio==1.78.0
+h5py==3.15.1
+idna==3.11
+ipykernel==7.1.0
+ipython==9.9.0
 ipython_pygments_lexers==1.1.1
 jedi==0.19.2
-jsonschema==4.25.1
+joblib==1.5.3
+jsonschema==4.26.0
 jsonschema-specifications==2025.9.1
-jupyter_client==8.6.3
-jupyter_core==5.8.1
-keras==3.11.3
+jupyter_client==8.8.0
+jupyter_core==5.9.1
+keras==3.13.2
 kiwisolver==1.4.9
 libclang==18.1.1
-Markdown==3.9
+Markdown==3.10.2
 markdown-it-py==4.0.0
 MarkupSafe==3.0.3
-matplotlib==3.10.6
-matplotlib-inline==0.1.7
+matplotlib==3.10.8
+matplotlib-inline==0.2.1
 mdurl==0.1.2
-ml_dtypes==0.5.3
+ml_dtypes==0.5.4
 namex==0.1.0
-narwhals==2.7.0
+narwhals==2.15.0
 nbformat==5.10.4
 nest-asyncio==1.6.0
 NeuralFoil==0.3.2
-numpy==2.3.3
+numpy==2.1.3
+onnx==1.17.0
 opt_einsum==3.4.0
-optree==0.17.0
-packaging==25.0
-pandas==2.3.3
+optree==0.18.0
+packaging==26.0
+pandas==3.0.0
 parso==0.8.5
 pexpect==4.9.0
-pillow==11.3.0
-platformdirs==4.4.0
-plotly==6.3.1
+pillow==12.1.0
+platformdirs==4.5.1
+plotly==6.5.2
 prompt_toolkit==3.0.52
-protobuf==6.32.1
-psutil==7.1.0
+protobuf==3.20.3
+psutil==7.2.1
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pydantic==2.12.5
+pydantic_core==2.41.5
 Pygments==2.19.2
-pyparsing==3.2.5
+pyparsing==3.3.2
 python-dateutil==2.9.0.post0
-pytz==2025.2
+PyYAML==6.0.3
 pyzmq==27.1.0
-referencing==0.36.2
+referencing==0.37.0
 requests==2.32.5
-rich==14.1.0
-rpds-py==0.27.1
-scipy==1.16.2
+rich==14.3.2
+rpds-py==0.30.0
+scikit-learn==1.8.0
+scipy==1.17.0
 seaborn==0.13.2
-setuptools==80.9.0
+sentry-sdk==2.51.0
+setuptools==82.0.0
 shapely==2.1.2
 six==1.17.0
+smmap==5.0.2
 sortedcontainers==2.4.0
 stack-data==0.6.3
-tensorboard==2.20.0
+tensorboard==2.19.0
 tensorboard-data-server==0.7.2
-tensorflow==2.20.0
-termcolor==3.1.0
-tornado==6.5.2
+tensorflow==2.19.1
+termcolor==3.3.0
+tf2onnx==1.16.1
+threadpoolctl==3.6.0
+tornado==6.5.4
 tqdm==4.67.1
 traitlets==5.14.3
+typing-inspection==0.4.2
 typing_extensions==4.15.0
-tzdata==2025.2
-urllib3==2.5.0
+urllib3==2.6.3
+wandb==0.24.1
 wcwidth==0.2.14
-Werkzeug==3.1.3
-wheel==0.45.1
-wrapt==1.17.3
+Werkzeug==3.1.5
+wheel==0.46.3
+wrapt==2.1.1
